# DevPossible.Ton

./: .gitignore  CI-CD.md  CLAUDE.md  DOCUMENTATION.md  DevPossible.Ton.slnx  GHERKIN_TEST_MAPPING.md  LICENSE  README.md  ROADMAP.md  TEST_ID_GUIDELINES.md  TEST_RULES.md  build.ps1  clean.ps1  launch-docs.bat  launch.ps1  package.json  publish.ps1  samples.ps1  test.ps1  update-version.ps1  version.json
.github/workflows/: build.yml  publish.yml  (+1 more)
doc/: DOCUMENTATION.md  DevPossible.Ton.Documentation.projitems  DevPossible.Ton.Documentation.shproj  package-lock.json  package.json
doc-html/: 404.html  conformance.html  contributing.html  data-types.html  error-handling.html  examples.html  implementation.html  index.html  lexical-structure.html  license.html  multi-line-strings.html  quick-start.html  schema-definition.html  syntax-grammar.html  template.html
src/Python/devpossible_ton/: DevPossible.Ton.Python.projitems  README.md  pyproject.toml  setup.py
src/Python/devpossible_ton/devpossible_ton/: __init__.py  errors.py
src/Python/devpossible_ton/devpossible_ton.egg-info/: PKG-INFO  SOURCES.txt
src/Python/devpossible_ton/devpossible_ton/formatter/: __init__.py  ton_formatter.py
src/Python/devpossible_ton/devpossible_ton/lexer/: __init__.py  ton_lexer.py
src/Python/devpossible_ton/devpossible_ton/models/: __init__.py  ton_array.py  ton_document.py  ton_enum_set.py  ton_object.py  ton_value.py
src/Python/devpossible_ton/devpossible_ton/parser/: ton_parser.py
src/Python/devpossible_ton/devpossible_ton/schema/: __init__.py  ton_schema.py
src/Python/devpossible_ton/devpossible_ton/serializer/: __init__.py  ton_serialize_options.py  ton_serializer.py
src/Python/devpossible_ton/devpossible_ton/validator/: ton_validator.py
src/Python/devpossible_ton/tests/: DevPossible.Ton.Python.Tests.projitems  DevPossible.Ton.Python.Tests.shproj  test_integration.py  test_lexer.py  test_validator.py
test/: DevPossible.Ton.TestDefinitions.projitems  DevPossible.Ton.TestDefinitions.shproj
(+209 files in other folders)
