[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devpossible-ton"
version = "1.0.0"
authors = [
    { name = "DevPossible, LLC", email = "support@devpossible.com" }
]
description = "Python library for parsing, validating, and serializing TON (Text Object Notation) files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ton", "parser", "serializer", "validator", "schema", "configuration", "data-format"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DevPossible/DevPossible.Ton"
Documentation = "https://github.com/DevPossible/DevPossible.Ton/wiki"
Repository = "https://github.com/DevPossible/DevPossible.Ton.git"
Issues = "https://github.com/DevPossible/DevPossible.Ton/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"